--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="page">
-      <!-- Banner 1--><a class="section section-banner d-none d-xl-block section-banner-top" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="blank" style="background-image: url(images/banner/background-02-1920x60.jpg); background-image: -webkit-image-set( url(images/banner/background-02-1920x60.jpg) 1x, url(images/banner/background-02-3840x120.jpg) 2x )"><img src="images/banner/foreground-02-1600x60.png" srcset="images/banner/foreground-02-1600x60.png 1x, images/banner/foreground-02-3200x120.png 2x" alt="" width="1600" height="310"></a>
+
       <!-- Page Header-->
       <header class="section page-header">
         <!--RD Navbar-->
@@ -74,8 +74,8 @@
               <div class="container">
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
-                    <h5 data-caption-animate="fadeInUp" data-caption-delay="100">It’s not just love for music</h5>
-                    <h1 data-caption-animate="fadeInUp" data-caption-delay="200">It’s My Passion</h1>
+                    <h5 data-caption-animate="fadeInUp" data-caption-delay="100">Cantare è pregare due volte</h5>
+                    <h1 data-caption-animate="fadeInUp" data-caption-delay="200">Sant Agostino</h1>
                     <div class="button-wrap" data-caption-animate="fadeInUp" data-caption-delay="300"><a class="button button-modern button-custom-size-1" href="#">see all events</a></div>
                   </div>
                 </div>
@@ -87,8 +87,8 @@
               <div class="container">
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
-                    <h5 data-caption-animate="fadeInUp" data-caption-delay="100">I make music to feel & enjoy</h5>
-                    <h1 data-caption-animate="fadeInUp" data-caption-delay="200">Your #1 DJ</h1>
+                    <h5 data-caption-animate="fadeInUp" data-caption-delay="100">Chi ha il cuore contento, sempre canta</h5>
+                    <h1 data-caption-animate="fadeInUp" data-caption-delay="200">Giovanni Verga</h1>
                     <div class="button-wrap" data-caption-animate="fadeInUp" data-caption-delay="300"><a class="button button-modern button-custom-size-1" href="#">see all events</a></div>
                   </div>
                 </div>
@@ -113,7 +113,7 @@
         <!--Swiper Pagination-->
         <div class="swiper-pagination"></div>
       </section>
-
+      <!--
       <section class="parallax-container section-lg text-center" data-parallax-img="images/bg-home1-01-1920x1000.jpg">
         <div class="parallax-content">
           <div class="container">
@@ -128,12 +128,12 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="section section-lg bg-default text-center">
         <div class="container">
-          <h6 class="text-gray-600">latest videos from me and my colleagues</h6>
-          <h2>recent videos</h2>
+          <h6 class="text-gray-600">Eventi più recenti</h6>
+          <h2>Ultimi video</h2>
           <!--Bootstrap tabs-->
           <div class="tabs-custom tabs-vertical tabs-video" id="tabs-2">
             <!--Tab panes-->
