--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="tab-content">
               <div class="tab-pane fade show active" id="tabs-2-1">
                 <div class="entry-video embed-responsive embed-responsive-16by9">
-                  <iframe width="886" height="668" src="video/concerto di natale.mp4" allowfullscreen=""></iframe>
+                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1Fe5dBuh6b-C57zeb_R1XRvDj0CZQ89lR/view?usp=share_link" allowfullscreen=""></iframe>
                 </div>
               </div>
               <div class="tab-pane fade" id="tabs-2-2">
@@ -205,7 +205,7 @@
               <ul class="nav nav-tabs">
                 <li class="nav-item" role="presentation"><a class="nav-link active" href="#tabs-2-1" data-toggle="tab">
                     <div class="nav-video">
-                      <figure class="nav-video-figure"><img src="images/video1.mp4" alt="" width="140" height="40"/>
+                      <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/1Fe5dBuh6b-C57zeb_R1XRvDj0CZQ89lR/view?usp=share_link" alt="" width="140" height="40"/>
                       </figure>
                       <h6 class="nav-video-title">Concerto di Natale 2024</h6>
                     </div></a></li>
