--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="tab-content">
               <div class="tab-pane fade show active" id="tabs-2-1">
                 <div class="entry-video embed-responsive embed-responsive-16by9">
-                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1Fe5dBuh6b-C57zeb_R1XRvDj0CZQ89lR/view?usp=share_link" allowfullscreen=""></iframe>
+                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1BOQSwe9JGHnPrK6IGw6b1ER7_zv7hTOH/view?usp=sharing" allowfullscreen=""></iframe>
                 </div>
               </div>
               <div class="tab-pane fade" id="tabs-2-2">
