--- a/index.html
+++ b/index.html
@@ -171,32 +171,38 @@
             <div class="tab-content">
               <div class="tab-pane fade show active" id="tabs-2-1">
                 <div class="entry-video embed-responsive embed-responsive-16by9">
-                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1BOQSwe9JGHnPrK6IGw6b1ER7_zv7hTOH/view?usp=sharing" allowfullscreen=""></iframe>
+                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1BOQSwe9JGHnPrK6IGw6b1ER7_zv7hTOH/preview" allowfullscreen=""></iframe>
                 </div>
               </div>
               <div class="tab-pane fade" id="tabs-2-2">
                 <div class="entry-video embed-responsive embed-responsive-16by9">
-                  <iframe width="886" height="668" src="video/natale2020.mp4" allowfullscreen=""></iframe>
+                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1Fe5dBuh6b-C57zeb_R1XRvDj0CZQ89lR/preview" allowfullscreen=""></iframe>
                 </div>
               </div>
+              
               <div class="tab-pane fade" id="tabs-2-3">
                 <div class="entry-video embed-responsive embed-responsive-16by9">
-                  <iframe width="886" height="668" src="video/2020.mp4" allowfullscreen=""></iframe>
+                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1CM4I_OVpnsdakxd9fvVMcaJi6tFjfYWv/preview" allowfullscreen=""></iframe>
                 </div>
               </div>
               <div class="tab-pane fade" id="tabs-2-4">
                 <div class="entry-video embed-responsive embed-responsive-16by9">
-                  <iframe width="886" height="668" src="video/corovirtuale.mp4" allowfullscreen=""></iframe>
+                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1SEOHbusNYp_YmhWf8cKlKAx2pMVBjTq9/preview" allowfullscreen=""></iframe>
                 </div>
               </div>
               <div class="tab-pane fade" id="tabs-2-5">
                 <div class="entry-video embed-responsive embed-responsive-16by9">
-                  <iframe width="886" height="668" src="video/Natale2019.mp4" allowfullscreen=""></iframe>
+                  <iframe width="886" height="668" src="https://drive.google.com/file/d/12xxZdIWvhuiPVY8SO19s3eXgdJOifS5V/preview" allowfullscreen=""></iframe>
                 </div>
               </div>
               <div class="tab-pane fade" id="tabs-2-6">
                 <div class="entry-video embed-responsive embed-responsive-16by9">
-                  <iframe width="886" height="668" src="video/Magnificat.mp4" allowfullscreen=""></iframe>
+                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1XcO9p-QrTsrUIADokGOYDW6wx7MRRvg1/preview" allowfullscreen=""></iframe>
+                </div>
+              </div>
+              <div class="tab-pane fade" id="tabs-2-7">
+                <div class="entry-video embed-responsive embed-responsive-16by9">
+                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1iuLnqofnJ3oEmPJW1tg2Uhe8wEB9i9v8/preview" allowfullscreen=""></iframe>
                 </div>
               </div>
             </div>
@@ -211,31 +217,37 @@
                     </div></a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-2" data-toggle="tab">
                     <div class="nav-video">
-                      <figure class="nav-video-figure"><img src="video/natale2020.mp4" alt="" width="140" height="40"/>
+                      <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/1Fe5dBuh6b-C57zeb_R1XRvDj0CZQ89lR/preview" alt="" width="140" height="40"/>
                       </figure>
                       <h6 class="nav-video-title">Concerto di Natale 2020 (virtuale)</h6>
                     </div></a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-3" data-toggle="tab">
                     <div class="nav-video">
-                      <figure class="nav-video-figure"><img src="video/2020.mp4" alt="" width="140" height="40"/>
+                      <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/1CM4I_OVpnsdakxd9fvVMcaJi6tFjfYWv/preview" alt="" width="140" height="40"/>
                       </figure>
-                      <h6 class="nav-video-title">Venite Fedeli</h6>
+                      <h6 class="nav-video-title">Concerto di Natale 2020 (virtuale)</h6>
                     </div></a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-4" data-toggle="tab">
                     <div class="nav-video">
-                      <figure class="nav-video-figure"><img src="video/corovirtuale.mp4" alt="" width="140" height="40"/>
+                      <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/1SEOHbusNYp_YmhWf8cKlKAx2pMVBjTq9/preview" alt="" width="140" height="40"/>
                       </figure>
-                      <h6 class="nav-video-title">Popoli tutti</h6>
+                      <h6 class="nav-video-title">Venite Fedeli</h6>
                     </div></a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-5" data-toggle="tab">
                     <div class="nav-video">
-                      <figure class="nav-video-figure"><img src="video/Natale2019.mp4" alt="" width="140" height="40"/>
+                      <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/12xxZdIWvhuiPVY8SO19s3eXgdJOifS5V/preview" alt="" width="140" height="40"/>
+                      </figure>
+                      <h6 class="nav-video-title">Popoli tutti</h6>
+                    </div></a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-6" data-toggle="tab">
+                    <div class="nav-video">
+                      <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/1XcO9p-QrTsrUIADokGOYDW6wx7MRRvg1/preview" alt="" width="140" height="40"/>
                       </figure>
                       <h6 class="nav-video-title">Concerto di Natale 2019</h6>
                     </div></a></li>
-                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-6" data-toggle="tab">
+                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-7" data-toggle="tab">
                       <div class="nav-video">
-                        <figure class="nav-video-figure"><img src="video/Magnificat.mp4" alt="" width="140" height="40"/>
+                        <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/1iuLnqofnJ3oEmPJW1tg2Uhe8wEB9i9v8/preview" alt="" width="140" height="40"/>
                         </figure>
                         <h6 class="nav-video-title">Magnificat (Debora Vezzani)</h6>
                       </div></a></li>
