--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
                     <h5 data-caption-animate="fadeInUp" data-caption-delay="100">Cantare è pregare due volte</h5>
-                    <h1 data-caption-animate="fadeInUp" data-caption-delay="200">Sant Agostino</h1>
+                    <!--<h1 data-caption-animate="fadeInUp" data-caption-delay="200">Sant Agostino</h1>-->
                   </div>
                 </div>
               </div>
@@ -88,8 +88,6 @@
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
                     <h5 data-caption-animate="fadeInUp" data-caption-delay="100">Chi ha il cuore contento, sempre canta</h5>
-                    <h1 data-caption-animate="fadeInUp" data-caption-delay="200">Giovanni Verga</h1>
-                    <div class="button-wrap" data-caption-animate="fadeInUp" data-caption-delay="300"><a class="button button-modern button-custom-size-1" href="#">see all events</a></div>
                   </div>
                 </div>
               </div>
@@ -100,9 +98,7 @@
               <div class="container">
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
-                    <h5 data-caption-animate="fadeInUp" data-caption-delay="100">I introduce new style of djing</h5>
-                    <h1 data-caption-animate="fadeInUp" data-caption-delay="200">Top DJing Skills</h1>
-                    <div class="button-wrap" data-caption-animate="fadeInUp" data-caption-delay="300"><a class="button button-modern button-custom-size-1" href="#">see all events</a></div>
+                    <h5 data-caption-animate="fadeInUp" data-caption-delay="100">mettere un frase</h5>
                   </div>
                 </div>
               </div>
