--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="images/image-1-2.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon-3.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,700%7COpen+Sans:400,600,700%7CSource+Code+Pro:300,400,500,600,700,900%7CNothing+You+Could+Do%7CPoppins:400,500">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -76,7 +76,7 @@
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
                     <h5 data-caption-animate="fadeInUp" data-caption-delay="100">Cantare è pregare due volte</h5>
-                    <!--<h1 data-caption-animate="fadeInUp" data-caption-delay="200">Sant Agostino</h1>-->
+                    <h1 data-caption-animate="fadeInUp" data-caption-delay="200"> </h1>
                   </div>
                 </div>
               </div>
