--- a/typography.html
+++ b/typography.html
@@ -18,10 +18,15 @@
       <img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
       <div class="preloader">
         <div class="preloader-body">
-          <div class="vinyl"></div>
-          <p>Loading...</p>
+          <div class="music-notes">
+            <span>♪</span>
+            <span>♫</span>
+            <span>♬</span>
+          </div>
+          <p>Music is on the way...</p>
         </div>
       </div>
+      
       
     <div class="page">
       <!-- Banner 1--><a class="section section-banner d-none d-xl-block section-banner-top" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="blank" style="background-image: url(images/banner/background-02-1920x60.jpg); background-image: -webkit-image-set( url(images/banner/background-02-1920x60.jpg) 1x, url(images/banner/background-02-3840x120.jpg) 2x )"><img src="images/banner/foreground-02-1600x60.png" srcset="images/banner/foreground-02-1600x60.png 1x, images/banner/foreground-02-3200x120.png 2x" alt="" width="1600" height="310"></a>
