--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <span>♫</span>
           <span>♬</span>
         </div>
-        <p>Loading...</p>
+        <p>Lascia che la musica ti trasporti...</p>
       </div>
     </div>
     
