--- a/typography.html
+++ b/typography.html
@@ -23,7 +23,7 @@
             <span>♫</span>
             <span>♬</span>
           </div>
-          <p>Music is on the way...</p>
+          <p>Scaldiamo i microfoni...</p>
         </div>
       </div>
       
