--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
           <span>♫</span>
           <span>♬</span>
         </div>
-        <p>Loading...</p>
+        <p>Stiamo accordando gli strumenti...</p>
       </div>
     </div>
     
