--- a/typography.html
+++ b/typography.html
@@ -98,12 +98,8 @@
           <h6 class="text-gray-600">Testo 1</h6> </div>
             <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="#">buy tickets</a></div>
             <div class="box-event novi-bg">
-              <div class="box-event-date-wrap">
-                <h3 class="box-event-date-day">12</h3>
-                <p class="box-event-date-month">OCT</p>
-              </div>
               <div class="box-event-text-wrap">
-                <h5 class="box-event-text-title"><a href="#">Let It Roll</a></h5>
+                <h5 class="box-event-text-title"><a href="#">Testo 1</a></h5>
                 <ul class="box-event-text-location">
                   <li>Milovice</li>
                   <li>Czech Republic</li>
