--- a/typography.html
+++ b/typography.html
@@ -101,24 +101,150 @@
             <div class="box-event novi-bg">
               <div class="box-event-text-wrap">
                 <h5 class="box-event-text-title">
-                  <a href="https://drive.google.com/file/d/1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK/view?usp=share_link">2018 FDG E AUTUNNO</a></h5>
+                  <a href="https://drive.google.com/file/d/1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK/view?usp=share_link">Autunno&Festa della gioventù 2018</a></h5>
               </div>
               <div class="box-event-button-wrap">
                 <a class="button button-outline button-sm" href="https://drive.google.com/file/d/1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK/view?usp=share_link">Downaload</a></div>
             </div>
             <div class="box-event novi-bg">
               <div class="box-event-text-wrap">
-                <h5 class="box-event-text-title"><a href="#">Testo 2</a></h5>
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/0B125_qILHPJeSzhaLVc3c2RjMm5jM0dVOG5YX3hydVBkcHhN/view?usp=share_link&resourcekey=0-bXJx9nwQIEibreymekkuDA">Avvento 2015</a></h5>
               </div>
-              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="#">Downaload</a></div>
+              <div class="box-event-button-wrap">
+                <a class="button button-outline button-sm" href="https://drive.google.com/file/d/0B125_qILHPJeSzhaLVc3c2RjMm5jM0dVOG5YX3hydVBkcHhN/view?usp=share_link&resourcekey=0-bXJx9nwQIEibreymekkuDA">Downaload</a></div>
             </div>
             <div class="box-event novi-bg">
               <div class="box-event-text-wrap">
-                <h5 class="box-event-text-title"><a href="#">Testo 3</a></h5>
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1vkU0cw68tMDysUERoO1eSonMOIOa28YY/view?usp=share_link">Avvento 2018</a></h5>
               </div>
-              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="#">Downaload</a></div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1vkU0cw68tMDysUERoO1eSonMOIOa28YY/view?usp=share_link">Downaload</a></div>
             </div>
-          
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/12BREaVhpNnBuTQRVHO9LHxNFUdXZocmY/view?usp=share_link">Corpus Domini</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/12BREaVhpNnBuTQRVHO9LHxNFUdXZocmY/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1ufpLszImXts_VAVITtjfTwPRl4N4EPk5/view?usp=share_link">Comunione&Cresima 2020</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1ufpLszImXts_VAVITtjfTwPRl4N4EPk5/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/0B125_qILHPJeWllZZldaSnlzQlFkeVZCNG9BV04xSjBDYmNZ/view?usp=share_link&resourcekey=0-dHDORhexfbzKRZ2QZxWBAg">Comunione&Cresima 2017</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/0B125_qILHPJeWllZZldaSnlzQlFkeVZCNG9BV04xSjBDYmNZ/view?usp=share_link&resourcekey=0-dHDORhexfbzKRZ2QZxWBAg">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1Lfpwpt7W9m-YtH5JSGNiH37wmivgVwE_/view?usp=share_link">Comunioni 2019</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1Lfpwpt7W9m-YtH5JSGNiH37wmivgVwE_/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1mwruJ4YKzGQF8CzaEhjdW27LrTfu7bYa/view?usp=share_link">Cresime 2019</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1mwruJ4YKzGQF8CzaEhjdW27LrTfu7bYa/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/0B125_qILHPJeTGFfek5Qd2d3QW9GZnU2Q2xtVVl3SVd4R1Jr/view?usp=share_link&resourcekey=0-kT7Wen6och75U54_1cj5Bw">Cristo è Risorto, Alleluia!</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/0B125_qILHPJeTGFfek5Qd2d3QW9GZnU2Q2xtVVl3SVd4R1Jr/view?usp=share_link&resourcekey=0-kT7Wen6och75U54_1cj5Bw">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/0B125_qILHPJeeldxUG1xZERPRjZvYUxfVV9SQXVfY1R2YmZB/view?usp=share_link&resourcekey=0-1wC9GMUDB8gSnY6BabxVgg">Festa della gioventù 2017</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/0B125_qILHPJeeldxUG1xZERPRjZvYUxfVV9SQXVfY1R2YmZB/view?usp=share_link&resourcekey=0-1wC9GMUDB8gSnY6BabxVgg">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1L6lCaNuECNNqPX9MMwATeXAcSjdAZcLI/view?usp=share_link">Festa della gioventù 2019</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1L6lCaNuECNNqPX9MMwATeXAcSjdAZcLI/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/18gVi-7IP4lVnwQz-BqqIbwU-AU3s0G1_/view?usp=share_link">Festa della gioventù 2020</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/18gVi-7IP4lVnwQz-BqqIbwU-AU3s0G1_/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1MGfyRxpSbMK2VcwyOL_t2KVYxmtiZWTl/view?usp=share_link">Festa della gioventù 2021</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1MGfyRxpSbMK2VcwyOL_t2KVYxmtiZWTl/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1-I8NdQA8tJisb3oYhAEOZNsWBcPYjD3q/view?usp=share_link">Foglietti canti estate-autunno 2020</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1-I8NdQA8tJisb3oYhAEOZNsWBcPYjD3q/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/0B125_qILHPJeak5iRWhHR3ZFbVdkT1FyV0RPcjE3TkdLQVhn/view?usp=share_link&resourcekey=0-W0uZOaVrvu4gAlwFFpV_bw">Foglietto FDG 2016</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/0B125_qILHPJeak5iRWhHR3ZFbVdkT1FyV0RPcjE3TkdLQVhn/view?usp=share_link&resourcekey=0-W0uZOaVrvu4gAlwFFpV_bw">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/0B125_qILHPJeQW9SUk5FZWJReGJnajNKR2FldHJuc0RmVHAw/view?usp=share_link&resourcekey=0-SUBXb3Ht2kVqZ_ZjxGQr-A">Gesù viene nel mondo</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/0B125_qILHPJeQW9SUk5FZWJReGJnajNKR2FldHJuc0RmVHAw/view?usp=share_link&resourcekey=0-SUBXb3Ht2kVqZ_ZjxGQr-A">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1JI3OqOBl2g0Ozm5e7K1NQ4FRrxUU-vhq/view?usp=share_link">In eterno Canteremo a te</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1JI3OqOBl2g0Ozm5e7K1NQ4FRrxUU-vhq/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1Wa8zr5gkvfvmsumzXXZ-2b0Dv77bxN7E/view?usp=share_link">Operiamo secondo il suo disegno</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1Wa8zr5gkvfvmsumzXXZ-2b0Dv77bxN7E/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/0B125_qILHPJeaE9kamktYkhDMGk4S0dwcjZORHJKU1J0czhN/view?usp=share_link&resourcekey=0-l0eRGJqwICAuk71dGPvXRg">Pasqua 2018</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/0B125_qILHPJeaE9kamktYkhDMGk4S0dwcjZORHJKU1J0czhN/view?usp=share_link&resourcekey=0-l0eRGJqwICAuk71dGPvXRg">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1tq_4bdyT4g6FzuxmAEjcy85UwAg5vx2U/view?usp=share_link">Pasqua 2019</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1tq_4bdyT4g6FzuxmAEjcy85UwAg5vx2U/view?usp=share_link">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/0B125_qILHPJeMDJ4S2YxVW5CUFdSY3BET25OTjQzeFdsMHNZ/view?usp=share_link&resourcekey=0-OGXptsKS43Fkp-2mbymxJQ">Quaresima 2017</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/0B125_qILHPJeMDJ4S2YxVW5CUFdSY3BET25OTjQzeFdsMHNZ/view?usp=share_link&resourcekey=0-OGXptsKS43Fkp-2mbymxJQ">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/0B125_qILHPJecExJbTVwa296bjRGTzBaWi1ReE1NTmJLOWFB/view?usp=share_link&resourcekey=0-1fkIQ-yHwrKxDfIlmZNYBg">Tempo ordinario + avvento 2016</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/0B125_qILHPJecExJbTVwa296bjRGTzBaWi1ReE1NTmJLOWFB/view?usp=share_link&resourcekey=0-1fkIQ-yHwrKxDfIlmZNYBg">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/0B125_qILHPJeSjdodVhScFo5M01najFqWXkwZnN6b1FmbjZJ/view?usp=share_link&resourcekey=0-u47IAcByAvSpK91kNWsQsA">Tempo ordinario 2017</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/0B125_qILHPJeSjdodVhScFo5M01najFqWXkwZnN6b1FmbjZJ/view?usp=share_link&resourcekey=0-u47IAcByAvSpK91kNWsQsA">Downaload</a></div>
+            </div>
+            <div class="box-event novi-bg">
+              <div class="box-event-text-wrap">
+                <h5 class="box-event-text-title"><a href="https://drive.google.com/file/d/1ncAW3oveIeQq9Jvm-HKUnm0_8bOwRE-O/view?usp=share_link">Via così</a></h5>
+              </div>
+              <div class="box-event-button-wrap"><a class="button button-outline button-sm" href="https://drive.google.com/file/d/1ncAW3oveIeQq9Jvm-HKUnm0_8bOwRE-O/view?usp=share_link">Downaload</a></div>
+            </div>
           <!-- Aggiungi altri testi qui -->
         </div>
       
