--- a/typography.html
+++ b/typography.html
@@ -95,7 +95,7 @@
           <h2 class="sezione-testo" onclick="toggleVisibility('triduo')">Triduo</h2>
         </div>
 
-        <div id="sezione-testo text-center">
+        <div id="messaggio-iniziale">
           Benvenuto nell'archivio! Seleziona una sezione per visualizzarne i dettagli.
         </div>
         
