--- a/typography.html
+++ b/typography.html
@@ -96,7 +96,8 @@
         </div>
 
         <div id="messaggio-iniziale">
-          Benvenuto nell'archivio! Seleziona una sezione per visualizzarne i dettagli.
+          <h5>Qui trovi tutti i canti delle celebrazioni.</h5>
+          <h6>Seleziona una sezione per visualizzare il contenuto.</h6>
         </div>
         
         <!-- Sezione Testi -->
