--- a/contacts.html
+++ b/contacts.html
@@ -55,9 +55,9 @@
                 </div>
                 <div class="rd-navbar-collapse">
                   <ul class="socialite-list">
-                    <li><a class="icon novi-icon socialite fa-facebook" href="#"></a></li>
-                    <li><a class="icon novi-icon socialite fa-twitter" href="#"></a></li>
-                    <li><a class="icon novi-icon socialite fa-instagram" href="#"></a></li>
+                    <li><a class="icon novi-icon socialite fa-facebook" href="https://www.facebook.com/profile.php?id=100032786907194"></a></li>
+                    <li><a class="icon novi-icon socialite fa-envelope" href="mailto:c.sualidaquila@gmail.com"></a></li>
+                    <li><a class="icon novi-icon socialite fa-instagram" href="https://www.instagram.com/corosualidaquila?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="></a></li>
                   </ul>
                 </div>
               </div>
