--- a/typography.html
+++ b/typography.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>Typography</title>
+    <title>Archivio testi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,7 +53,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
                       </li>
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="typography.html">Typography</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="typography.html">Archivio testi</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                       </li>
@@ -62,9 +62,9 @@
                 </div>
                 <div class="rd-navbar-collapse">
                   <ul class="socialite-list">
-                    <li><a class="icon novi-icon socialite fa-facebook" href="#"></a></li>
-                    <li><a class="icon novi-icon socialite fa-twitter" href="#"></a></li>
-                    <li><a class="icon novi-icon socialite fa-instagram" href="#"></a></li>
+                    <li><a class="icon novi-icon socialite fa-facebook" href="https://www.facebook.com/profile.php?id=100032786907194"></a></li>
+                    <li><a class="icon novi-icon socialite fa-envelope" href="mailto:c.sualidaquila@gmail.com"></a></li>
+                    <li><a class="icon novi-icon socialite fa-instagram" href="https://www.instagram.com/corosualidaquila?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="></a></li>
                   </ul>
                 </div>
               </div>
@@ -76,11 +76,11 @@
       <section class="breadcrumbs-custom bg-image context-dark" 
       style="background-color: #222d4f;">
         <div class="container">
-          <h2 class="breadcrumbs-custom-title">Archivio</h2>
+          <h2 class="breadcrumbs-custom-title">Archivio testi</h2>
         </div>
         <ul class="breadcrumbs-custom-path">
           <li><a href="index.html">Home</a></li>
-          <li class="active">Archivio</li>
+          <li class="active">Archivio testi</li>
         </ul>
       </section>
 
